Working on attendance module

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -18,6 +18,7 @@ autoloaderNamespaces[] = "Twitter"
 autoloaderNamespaces.Twitter = "Twitter_"
 autoloaderNamespaces[] = "EasyBib"
 autoloaderNamespaces[] = "Kayhelpers"
+autoloaderNamespaces[] = "Ingot"
 
 
 ;; added for Doctrine2 Integration
@@ -47,6 +48,7 @@ routes.index.defaults.action = "index"
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.view[] =
 resources.view.helperPath.ZendX_JQuery_View_Helper = "ZendX/JQuery/View/Helper"
+resources.view.helperPath.Ingot_JQuery_View_Helper = "Ingot/JQuery/View/Helper"
 resources.view.helperPath.EasyBib_View_Helper = "EasyBib/View/Helper"
 ;; session
 resources.session.save_path = APPLICATION_PATH "/../data/session"
